--- a/main.css
+++ b/main.css
@@ -81,15 +81,17 @@ video {
     background-color: rgba(72, 228, 72, 0.63);
 } 
 
-#meet {
+#metered-frame {
     position: fixed;
     width: 100%;
     height: 100%;
+    background-color: #333;
     transform: scale(0);
     transition: .4s;
+    z-index: 432421512;
 }
 
-#meet.show{
+#metered-frame.show{
     transform: scale(1);
 }
 
